[tool.poetry]
name = "2022-dash"
version = "0.1.0"
description = ""
authors = ["Arjan"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.6.1"
pandas = "^1.4.3"
dash-bootstrap-components = "^1.2.1"
plotly = "^5.10.0"
plotly-express = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
